Removed redundant comments